# Recoup-Chat

./: .cursorrules  .env.example  .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  scratchpad.md  tailwind.config.ts
abi/: inProcessImplementationAbi.ts  inProcessProtocolAbi.ts
app/: globals.css  layout.tsx  page.tsx
components/: AccountModal.tsx  ArtistSelectionOverlay.tsx  ArtistSettingModal.tsx  CommentDetailsDialog.tsx  CommentsResult.tsx  Form.tsx  ImageWithFallback.tsx  Input.tsx  LucideIcon.tsx  Modal.tsx  ModalDownloadModal.tsx  Slider.tsx  TextArea.tsx  Tooltip.tsx
hooks/: useActionApprove.tsx  useActivities.tsx  useAgentRunner.tsx  useAgentSocket.tsx  useAgents.tsx  useAnalysisActions.tsx  useAnalyzeArtistTool.tsx  useApprovals.tsx  useApprovedOrDeniedActions.tsx  useArtistAgents.ts  useArtistComments.tsx  useArtistFans.ts  useArtistFromRoom.ts  useArtistMode.tsx  useArtistPosts.ts  useArtistSegments.ts  useArtistSelection.ts  useArtistSetting.tsx  useArtists.tsx  useAttachments.ts  useAutoLogin.tsx  useAutopilot.tsx  useChainOfThought.tsx  useChat.tsx  useChatContext.tsx  useChatSegment.ts  useClickChat.tsx  useClickCurrentState.tsx  useClickOutsideSelect.tsx  useContentCalendar.tsx  useConversation.tsx  useConversations.tsx  useCreateArtistTool.ts  useCreateArtistTool.tsx  useCreateArtists.tsx  useCredits.tsx  useCsrfToken.tsx  useDownloadReport.tsx  useFansCSVExport.tsx  useFansProfiles.tsx  (+68 more)
lib/: addArtist.tsx  arrangeMessages.tsx  capitalize.tsx  connectFansToArtist.tsx  consts.ts  copyMessagesClient.ts  (+81 more)
(+910 files in other folders)
